fix z-index

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1470,7 +1470,7 @@ textarea {
 
 .fixed{
     position: fixed;
-    z-index: 20;
+    z-index: 120;
     margin: 0 auto;
     backdrop-filter: blur(20px);
     max-width: 1426px;
